--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5"
   },
-  "homepage": "https://bionicsticks.github.io/RunCoachAI"
+  "homepage": "https://jpwilson.github.io/RunCoachAI"
 }
